# BasePython

./: Dockerfile  README.MD  README_ORIGINAL.md  main.py
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
